# pkgjni-example

./: Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  pkgjni-example.pc.in  pkgjni.spec
doc/: Makefile.am  Makefile.in  doxygen.conf.in
m4/: ax_classpath_add.m4  ax_classpath_canonical.m4  ax_classpath_search.m4
src/: Makefile.in
src/c/: Makefile.am  Makefile.in  scratch.c  scratch.h
src/java/: JNILibrary.java  Makefile.am  Makefile.in  Scratch.java  manifest.in
src/java/com/example/pkgjni/: properties.in
test/: Makefile.am  Makefile.in  ScratchTest.java  junitTests.in.sh  scratchTest.c
